# hrms-backend

./: .gitignore  Readme.md  database.py  main.py  pyproject.toml  requirements.txt
models/: attendance.py  employee.py
routers/: attendance.py  employee.py
