[tool.poetry]
name = "hrms-backend"
version = "0.1.0"
description = "HRMS Lite Backend"
authors = ["Sarbesh Kumar Tiwari"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "0.111.1"
uvicorn = { version = "0.23.1", extras = ["standard"] }
motor = "3.3.2"
pymongo = "4.6.1"
pydantic = ">=2.7,<3"
python-multipart = "*"
email-validator = "*"
jinja2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
